# learn_generative_ai

./: online-class files code.docx  pyproject.toml  step 11 resources and code .docx  ~$ep 11 resources and code .docx  ~$line-class files code.docx
dailyDo-todo-app/: pyproject.toml
dailyDo-todo-app/dailydo_todo_app/: .env  main.py
daily_todo_app/: .env  pyproject.toml  settings.py
daily_todo_app/app/: main.py
fastapi-demo/: main.py
fastapi-helloworld/: .env  pyproject.toml
fastapi-helloworld/fastapi_neon/: main.py  settings.py
fastapi-helloworld/tests/: .env
my_first_api/: pyproject.toml
my_first_api/my_first_api/: main.py
online-class/: .env  pyproject.toml
online-class - Copy/: pyproject.toml
online-class - Copy/online_class/: index.html  main.py
online-class/frontend/: package-lock.json  package.json  types.d.ts
online-class/frontend/src/Actions/: actions.ts
online-class/frontend/src/app/: page.tsx
online-class/frontend/src/components/: AddTask.tsx  EditTask.tsx  Modal.tsx  Task.tsx  TodoTables.tsx  ToolTip.tsx
online-class/online_class/: index.html  main.py  settings.py
online-class/tests/: test_main.py
sqlmodel_curd/: pyproject.toml
sqlmodel_curd/sqlmodel_curd/: main.py
todo/: pyproject.toml
todo/frontend/: package-lock.json
todo/frontend/src/app/: addTodo.tsx  deleteTodo.tsx  getData.tsx  page.tsx  postTodo.tsx  updateTodo.tsx
todo/todo/: .env  main.py  model.py  pyproject.toml
uit-api-class/: pyproject.toml
