[tool.poetry]
name = "learn-generative-ai"
version = "0.1.0"
description = ""
authors = ["Hamid Nisar <hamidnisarpiaic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg = {extras = ["binary"], version = "^3.1.18"}
fastapi = "^0.110.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
