[tool.poetry]
name = "my-first-api"
version = "0.1.0"
description = ""
authors = ["Hamid Nisar <hamidnisarpiaic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
unicorn = "^2.0.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
